--- a/src/style/common.less
+++ b/src/style/common.less
@@ -23,6 +23,7 @@
 .btnHover(@background:#00aeee) {
 	transition: all 0.3s;
 	&:hover {
+		border-color:@background;
 		background: @background;
 		color: #ffffff;
 	}
